// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  display: block;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2.c2.c2.c2.c2 {
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  width: 100%;
  gap: 24px;
}

.c9.c9.c9.c9.c9 {
  position: absolute;
  height: 2px;
  top: -0.5px;
  left: 0%;
  background-color: hsla(227,100%,59%,1);
  pointer-events: none;
}

.c11.c11.c11.c11.c11 {
  border-bottom-width: 1px;
  border-bottom-color: hsla(211,20%,52%,0.18);
  border-bottom-style: solid;
}

.c12.c12.c12.c12.c12 {
  display: none;
}

.c14.c14.c14.c14.c14 {
  display: block;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 0px;
  padding-right: 0px;
  background-color: hsla(0,0%,100%,0);
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
}

.c6.c6.c6.c6.c6:hover {
  border-bottom-color: hsla(214,28%,84%,1);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:disabled {
  cursor: not-allowed;
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c10.c10.c10.c10.c10 {
  cursor: pointer;
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(227,100%,59%,0.18);
}

.c3.c3.c3.c3.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    gap: 32px;
  }
}

@media screen and (min-width:320px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:320px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:0px) and (max-width:768px) {
  .c6.c6.c6.c6.c6 {
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="tabs"
    >
      <div
        class="c1"
        data-blade-component="box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
              role="tablist"
            >
              <button
                aria-controls="tabs-1-payments-tabpanel"
                aria-selected="false"
                class="c6"
                data-active=""
                data-blade-component="tab-item"
                id="tabs-1-payments-tabitem"
                role="tab"
                tabindex="0"
                type="button"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Payments
                </p>
              </button>
              <button
                aria-controls="tabs-1-refunds-tabpanel"
                aria-selected="true"
                class="c6"
                data-blade-component="tab-item"
                id="tabs-1-refunds-tabitem"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <p
                  class="c8"
                  data-blade-component="text"
                >
                  Refunds
                </p>
              </button>
            </div>
          </div>
          <div
            class="c9 c10"
            data-blade-component="tab-indicator"
            pointer-events="none"
            style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; transform: translate(0px, -1.5px);"
          />
        </div>
        <div
          class="c11"
          data-blade-component="base-box"
          style="transform: translateY(-1px);"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="tabs-1-payments-tabitem"
        class="c12"
        data-blade-component="tab-panel"
        id="tabs-1-payments-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c13"
          data-blade-component="text"
        >
          Payments
        </p>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="tabs-1-refunds-tabitem"
        class="c14"
        data-blade-component="tab-panel"
        id="tabs-1-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c13"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should render with filled variant 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  display: block;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2.c2.c2.c2.c2 {
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  width: 100%;
  gap: 2px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 2px;
  border-width: 1px;
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
}

.c8.c8.c8.c8.c8 {
  margin: auto;
  height: 20px;
  border-left-color: hsla(214,28%,84%,1);
  border-left-style: solid;
}

.c12.c12.c12.c12.c12 {
  position: absolute;
  top: 0px;
  left: 0px;
  background-color: hsla(227,100%,59%,0.09);
  border-radius: 2px;
  pointer-events: none;
}

.c14.c14.c14.c14.c14 {
  display: none;
}

.c16.c16.c16.c16.c16 {
  display: block;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: hsla(0,0%,100%,0);
  border-radius: 2px;
  border-bottom-style: solid;
  border-bottom-width: 0;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
}

.c6.c6.c6.c6.c6:hover {
  border-bottom-color: hsla(214,28%,84%,1);
  background-color: hsla(211,20%,52%,0.12);
}

.c6.c6.c6.c6.c6:disabled {
  cursor: not-allowed;
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
  background-color: hsla(211,20%,52%,0.12);
}

.c6.c6.c6.c6.c6 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c10.c10.c10.c10.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: transparent;
  border-radius: 2px;
  border-bottom-style: solid;
  border-bottom-width: 0;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
}

.c10.c10.c10.c10.c10:hover {
  border-bottom-color: hsla(214,28%,84%,1);
  background-color: transparent;
}

.c10.c10.c10.c10.c10:disabled {
  cursor: not-allowed;
  background-color: hsla(0,0%,100%,0);
}

.c10.c10.c10.c10.c10:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
  background-color: hsla(227,100%,59%,0.09);
}

.c10.c10.c10.c10.c10 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c13.c13.c13.c13.c13 {
  cursor: pointer;
}

.c13.c13.c13.c13.c13:hover {
  background-color: hsla(227,100%,59%,0.18);
}

.c9.c9.c9.c9.c9 {
  border-width: 0;
  border-left-style: solid;
  border-left-width: 1px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 20px;
}

.c3.c3.c3.c3.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:320px) {
  .c5.c5.c5.c5.c5 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c5.c5.c5.c5.c5 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c5.c5.c5.c5.c5 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c8.c8.c8.c8.c8 {
    border-left-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c8.c8.c8.c8.c8 {
    border-left-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c8.c8.c8.c8.c8 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c8.c8.c8.c8.c8 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c8.c8.c8.c8.c8 {
    border-left-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c12.c12.c12.c12.c12 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c12.c12.c12.c12.c12 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c12.c12.c12.c12.c12 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c12.c12.c12.c12.c12 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c12.c12.c12.c12.c12 {
    pointer-events: none;
  }
}

@media screen and (min-width:0px) and (max-width:768px) {
  .c6.c6.c6.c6.c6 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 4px;
    padding-right: 4px;
  }
}

@media screen and (min-width:0px) and (max-width:768px) {
  .c10.c10.c10.c10.c10 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 4px;
    padding-right: 4px;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="tabs"
    >
      <div
        class="c1"
        data-blade-component="box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
              role="tablist"
            >
              <button
                aria-controls="tabs-4-payments-tabpanel"
                aria-selected="false"
                class="c6"
                data-active=""
                data-blade-component="tab-item"
                id="tabs-4-payments-tabitem"
                role="tab"
                tabindex="0"
                type="button"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Payments
                </p>
              </button>
              <div
                class="c8 c9"
                data-blade-component="divider"
                role="separator"
              />
              <button
                aria-controls="tabs-4-refunds-tabpanel"
                aria-selected="true"
                class="c10"
                data-blade-component="tab-item"
                id="tabs-4-refunds-tabitem"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <p
                  class="c11"
                  data-blade-component="text"
                >
                  Refunds
                </p>
              </button>
            </div>
          </div>
          <div
            class="c12 c13"
            data-blade-component="tab-indicator"
            pointer-events="none"
            style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; height: 0px; transform: translate(0px, 0px);"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="tabs-4-payments-tabitem"
        class="c14"
        data-blade-component="tab-panel"
        id="tabs-4-payments-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c15"
          data-blade-component="text"
        >
          Payments
        </p>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="tabs-4-refunds-tabitem"
        class="c16"
        data-blade-component="tab-panel"
        id="tabs-4-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c15"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should render with isFullWidthTabItem 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  display: block;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2.c2.c2.c2.c2 {
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  width: 100%;
  gap: 24px;
}

.c9.c9.c9.c9.c9 {
  position: absolute;
  height: 2px;
  top: -0.5px;
  left: 0%;
  background-color: hsla(227,100%,59%,1);
  pointer-events: none;
}

.c11.c11.c11.c11.c11 {
  border-bottom-width: 1px;
  border-bottom-color: hsla(211,20%,52%,0.18);
  border-bottom-style: solid;
}

.c12.c12.c12.c12.c12 {
  display: none;
}

.c14.c14.c14.c14.c14 {
  display: block;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  width: 100%;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 0px;
  padding-right: 0px;
  background-color: hsla(0,0%,100%,0);
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
}

.c6.c6.c6.c6.c6:hover {
  border-bottom-color: hsla(214,28%,84%,1);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:disabled {
  cursor: not-allowed;
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c10.c10.c10.c10.c10 {
  cursor: pointer;
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(227,100%,59%,0.18);
}

.c3.c3.c3.c3.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    gap: 32px;
  }
}

@media screen and (min-width:320px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:320px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:0px) and (max-width:768px) {
  .c6.c6.c6.c6.c6 {
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="tabs"
    >
      <div
        class="c1"
        data-blade-component="box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
              role="tablist"
            >
              <button
                aria-controls="tabs-5-payments-tabpanel"
                aria-selected="false"
                class="c6"
                data-active=""
                data-blade-component="tab-item"
                id="tabs-5-payments-tabitem"
                role="tab"
                tabindex="0"
                type="button"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Payments
                </p>
              </button>
              <button
                aria-controls="tabs-5-refunds-tabpanel"
                aria-selected="true"
                class="c6"
                data-blade-component="tab-item"
                id="tabs-5-refunds-tabitem"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <p
                  class="c8"
                  data-blade-component="text"
                >
                  Refunds
                </p>
              </button>
            </div>
          </div>
          <div
            class="c9 c10"
            data-blade-component="tab-indicator"
            pointer-events="none"
            style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; transform: translate(0px, -1.5px);"
          />
        </div>
        <div
          class="c11"
          data-blade-component="base-box"
          style="transform: translateY(-1px);"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="tabs-5-payments-tabitem"
        class="c12"
        data-blade-component="tab-panel"
        id="tabs-5-payments-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c13"
          data-blade-component="text"
        >
          Payments
        </p>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="tabs-5-refunds-tabitem"
        class="c14"
        data-blade-component="tab-panel"
        id="tabs-5-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c13"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should render with size 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  display: block;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2.c2.c2.c2.c2 {
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  width: 100%;
  gap: 24px;
}

.c9.c9.c9.c9.c9 {
  position: absolute;
  height: 2px;
  top: -0.5px;
  left: 0%;
  background-color: hsla(227,100%,59%,1);
  pointer-events: none;
}

.c11.c11.c11.c11.c11 {
  border-bottom-width: 1px;
  border-bottom-color: hsla(211,20%,52%,0.18);
  border-bottom-style: solid;
}

.c12.c12.c12.c12.c12 {
  display: none;
}

.c14.c14.c14.c14.c14 {
  display: block;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 0px;
  padding-right: 0px;
  background-color: hsla(0,0%,100%,0);
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
}

.c6.c6.c6.c6.c6:hover {
  border-bottom-color: hsla(214,28%,84%,1);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:disabled {
  cursor: not-allowed;
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c10.c10.c10.c10.c10 {
  cursor: pointer;
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(227,100%,59%,0.18);
}

.c3.c3.c3.c3.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    gap: 32px;
  }
}

@media screen and (min-width:320px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:320px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:0px) and (max-width:768px) {
  .c6.c6.c6.c6.c6 {
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="tabs"
    >
      <div
        class="c1"
        data-blade-component="box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
              role="tablist"
            >
              <button
                aria-controls="tabs-6-payments-tabpanel"
                aria-selected="false"
                class="c6"
                data-active=""
                data-blade-component="tab-item"
                id="tabs-6-payments-tabitem"
                role="tab"
                tabindex="0"
                type="button"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Payments
                </p>
              </button>
              <button
                aria-controls="tabs-6-refunds-tabpanel"
                aria-selected="true"
                class="c6"
                data-blade-component="tab-item"
                id="tabs-6-refunds-tabitem"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <p
                  class="c8"
                  data-blade-component="text"
                >
                  Refunds
                </p>
              </button>
            </div>
          </div>
          <div
            class="c9 c10"
            data-blade-component="tab-indicator"
            pointer-events="none"
            style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; transform: translate(0px, -1.5px);"
          />
        </div>
        <div
          class="c11"
          data-blade-component="base-box"
          style="transform: translateY(-1px);"
        />
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="tabs-6-payments-tabitem"
        class="c12"
        data-blade-component="tab-panel"
        id="tabs-6-payments-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c13"
          data-blade-component="text"
        >
          Payments
        </p>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="tabs-6-refunds-tabitem"
        class="c14"
        data-blade-component="tab-panel"
        id="tabs-6-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c13"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should render with vertical orientation 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2.c2.c2.c2.c2 {
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: auto;
  width: 0px;
  border-width: 1px;
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0px;
  width: 100%;
  gap: 0px;
}

.c10.c10.c10.c10.c10 {
  display: none;
}

.c12.c12.c12.c12.c12 {
  display: block;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  gap: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: hsla(0,0%,100%,0);
  border-radius: 0;
  border-left-style: solid;
  border-left-width: 1.5px;
  border-left-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
}

.c6.c6.c6.c6.c6:hover {
  border-left-color: hsla(214,28%,84%,1);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:disabled {
  cursor: not-allowed;
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  gap: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: hsla(0,0%,100%,0);
  border-radius: 0;
  border-left-style: solid;
  border-left-width: 1.5px;
  border-left-color: hsla(227,100%,59%,1);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
}

.c8.c8.c8.c8.c8:hover {
  border-left-color: hsla(227,100%,59%,1);
  background-color: hsla(0,0%,100%,0);
}

.c8.c8.c8.c8.c8:disabled {
  cursor: not-allowed;
  background-color: hsla(0,0%,100%,0);
}

.c8.c8.c8.c8.c8:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
  background-color: hsla(0,0%,100%,0);
}

.c8.c8.c8.c8.c8 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c3.c3.c3.c3.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:320px) {
  .c4.c4.c4.c4.c4 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c4.c4.c4.c4.c4 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c4.c4.c4.c4.c4 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c4.c4.c4.c4.c4 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c4.c4.c4.c4.c4 {
    border-style: solid;
  }
}

@media screen and (min-width:0px) and (max-width:768px) {
  .c6.c6.c6.c6.c6 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media screen and (min-width:0px) and (max-width:768px) {
  .c8.c8.c8.c8.c8 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

<body>
  <div>
    <div
      class="c0"
      data-blade-component="tabs"
    >
      <div
        class="c1"
        data-blade-component="box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c0"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
              style="transform: translateX(1.5px);"
            />
            <div
              class="c5"
              data-blade-component="base-box"
              role="tablist"
            >
              <button
                aria-controls="tabs-3-payments-tabpanel"
                aria-selected="false"
                class="c6"
                data-active=""
                data-blade-component="tab-item"
                id="tabs-3-payments-tabitem"
                role="tab"
                tabindex="0"
                type="button"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Payments
                </p>
              </button>
              <button
                aria-controls="tabs-3-refunds-tabpanel"
                aria-selected="true"
                class="c8"
                data-blade-component="tab-item"
                id="tabs-3-refunds-tabitem"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Refunds
                </p>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="tabs-3-payments-tabitem"
        class="c10"
        data-blade-component="tab-panel"
        id="tabs-3-payments-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c11"
          data-blade-component="text"
        >
          Payments
        </p>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="tabs-3-refunds-tabitem"
        class="c12"
        data-blade-component="tab-panel"
        id="tabs-3-refunds-tabpanel"
        role="tabpanel"
        tabindex="0"
      >
        <p
          class="c11"
          data-blade-component="text"
        >
          Refunds
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tabs should support adding data-analytics attribute 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  display: block;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2.c2.c2.c2.c2 {
  overflow: auto hidden;
  white-space: nowrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  width: 100%;
  gap: 24px;
}

.c9.c9.c9.c9.c9 {
  position: absolute;
  height: 2px;
  top: -0.5px;
  left: 0%;
  background-color: hsla(227,100%,59%,1);
  pointer-events: none;
}

.c11.c11.c11.c11.c11 {
  border-bottom-width: 1px;
  border-bottom-color: hsla(211,20%,52%,0.18);
  border-bottom-style: solid;
}

.c14.c14.c14.c14.c14 {
  display: none;
}

.c12.c12.c12.c12.c12 {
  display: block;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c7.c7.c7.c7.c7 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 0px;
  padding-right: 0px;
  background-color: hsla(0,0%,100%,0);
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: transparent;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
}

.c6.c6.c6.c6.c6:hover {
  border-bottom-color: hsla(214,28%,84%,1);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:disabled {
  cursor: not-allowed;
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6:focus-visible {
  border-radius: 4px;
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
  background-color: hsla(0,0%,100%,0);
}

.c6.c6.c6.c6.c6 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c10.c10.c10.c10.c10 {
  cursor: pointer;
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(227,100%,59%,0.18);
}

.c3.c3.c3.c3.c3::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    gap: 32px;
  }
}

@media screen and (min-width:320px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c9.c9.c9.c9.c9 {
    pointer-events: none;
  }
}

@media screen and (min-width:320px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c11.c11.c11.c11.c11 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:0px) and (max-width:768px) {
  .c6.c6.c6.c6.c6 {
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

<div>
  <div
    class="c0"
    data-analytics-tab="userOptions"
    data-blade-component="tabs"
  >
    <div
      class="c1"
      data-blade-component="box"
    >
      <div
        class="c2 c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
            role="tablist"
          >
            <button
              aria-controls="tabs-27-payments-tabpanel"
              aria-selected="true"
              class="c6"
              data-active=""
              data-analytics-tab-item="payments"
              data-blade-component="tab-item"
              id="tabs-27-payments-tabitem"
              role="tab"
              tabindex="0"
              type="button"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Payments
              </p>
            </button>
            <button
              aria-controls="tabs-27-refunds-tabpanel"
              aria-selected="false"
              class="c6"
              data-analytics-tab-item="refunds"
              data-blade-component="tab-item"
              disabled=""
              id="tabs-27-refunds-tabitem"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Refunds
              </p>
            </button>
          </div>
        </div>
        <div
          class="c9 c10"
          data-blade-component="tab-indicator"
          pointer-events="none"
          style="transition-property: transform, width, background-color; transition-duration: 0ms; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); width: 0px; transform: translate(0px, -1.5px);"
        />
      </div>
      <div
        class="c11"
        data-blade-component="base-box"
        style="transform: translateY(-1px);"
      />
    </div>
    <div
      aria-hidden="false"
      aria-labelledby="tabs-27-payments-tabitem"
      class="c12"
      data-analytics-tab-panel="payments"
      data-blade-component="tab-panel"
      id="tabs-27-payments-tabpanel"
      role="tabpanel"
      tabindex="0"
    >
      <p
        class="c13"
        data-blade-component="text"
      >
        Payments
      </p>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="tabs-27-refunds-tabitem"
      class="c14"
      data-analytics-tab-panel="refunds"
      data-blade-component="tab-panel"
      id="tabs-27-refunds-tabpanel"
      role="tabpanel"
      tabindex="0"
    >
      <p
        class="c13"
        data-blade-component="text"
      >
        Refunds
      </p>
    </div>
  </div>
</div>
`;
